--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,14 @@ body{
 	font-size:14px;
 	background:#222;
 	color:#333;
-	text-shadow:1px 1px 1px #fff;
 	overflow-x:hidden;
 }
 img{
 	max-width:100%;
+}
+
+img.full-width{
+	width:100%;
 }
 
 h1{
@@ -33,6 +36,42 @@ a:hover{
 p{
 	padding:5px 0px;
 }
+
+.sun {
+	width: 7em;
+	height: 7em;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	background: orange;
+	position: absolute;
+	z-index: 1;
+	bottom: 0;
+	left:20%;
+	-webkit-transition: left 1s ease-in, bottom 1s linear, background 1s linear;
+	-moz-transition: left 1s ease-in, bottom 1s linear, background 1s linear;
+	-o-transition: left 1s ease-in, bottom 1s linear, background 1s linear;
+	transition: left 1s ease-in, bottom 1s linear, background 1s linear;
+
+}
+
+.sun.day {
+	bottom: 30%;
+	left:40%;
+	background: yellow;
+}
+
+.sun.evening {
+	bottom: 10%;
+	left:60%;
+	background: red;
+}
+
+.sun.night {
+	bottom: -10%;
+	left:80%;
+}
+
 .wrapper{
 	width:960px;
 	margin:20px auto;
@@ -63,7 +102,7 @@ p{
 	box-shadow:0px 0px 7px #000;
 }
 .pxs_bg{
-	background:transparent url(../images/bg.png) repeat top left;
+	background:transparent url(../images/bg.png) repeat top left;	
 }
 .pxs_bg div{
 	position:absolute;
@@ -76,21 +115,39 @@ p{
 	background-color:transparent;
 }
 .pxs_bg .pxs_bg1{
-	background-image:url(../images/clouds.jpg);
+	background-image:url(../images/clouds-pink.jpg);
+	
+	-webkit-transition: background 1s linear;
+	-moz-transition: background 1s linear;
+	-o-transition: background 1s linear;
+	transition: background 1s linear;
 	/*left negative 1/8 of ww*/
 }
+
+.pxs_bg .pxs_bg1.evening {
+	background-image:url(../images/clouds-dark.jpg);
+}
+
+.pxs_bg .pxs_bg1.night {
+	background-image:url(../images/clouds-night.jpg);
+}
+
+.pxs_bg .pxs_bg1.day {
+	background-image:url(../images/clouds.jpg);
+}
+
 .pxs_bg .pxs_bg2{
 	background-image:url(../images/houses-trans.png);
 	background-repeat:repeat-x;
 	top: 263px;
-	z-index: 1;
+	z-index: 10;
 	/*left negative 1/4 of ww*/
 }
 .pxs_bg .pxs_bg3{
 	background-image:url(../images/green-grass.png);
 	background-repeat:repeat-x;
 	top: 362px;
-	z-index: 0;
+	z-index: 1;
 	/*left negative 1/2 of ww*/
 }
 .pxs_slider_wrapper{
@@ -112,7 +169,7 @@ ul.pxs_slider li{
 	float:left;
 	position:relative;
 }
-ul.pxs_slider li img{
+ul.pxs_slider li img, ul.pxs_slider li div{
 	display:block;
 	margin:35px auto 0px auto;
 	-moz-box-shadow:0px 0px 7px #222;
@@ -122,13 +179,36 @@ ul.pxs_slider li img{
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px;
 	border-radius:4px;
+	position: absolute;	
+	z-index: 20;
+	margin-left: -158px;
+	left: 50%;
+	width: 300px;
 }
+
+ul.pxs_slider li div{
+	background-color: #FEBD2B;
+	color: white;	
+	height: 200px;
+	font-size: 1.5em;
+	font-style: italic;	
+	-webkit-transition: background 1s linear;
+	-moz-transition: background 1s linear;
+	-o-transition: background 1s linear;
+	transition: background 1s linear;
+}
+
+ul.pxs_slider li div.day{
+	background-color: #14B06F;
+}
+
+
 ul.pxs_thumbnails{
 	height:35px;
 	position:absolute;
 	top:320px;
 	left:50%;
-	z-index: 2;
+	z-index: 10;
 }
 ul.pxs_thumbnails li{
 	position:absolute;
@@ -146,6 +226,12 @@ ul.pxs_thumbnails li img{
 ul.pxs_thumbnails li.selected img{
 	opacity:1.0;
 }
+
+
+.pxs_navigation{
+	display:none;
+}
+
 .pxs_navigation span{
 	position:absolute;
 	width:30px;
@@ -165,9 +251,11 @@ ul.pxs_thumbnails li.selected img{
 }
 .pxs_navigation span.pxs_prev{
 	background:#000 url(../images/prev.png) no-repeat center center;
+	z-index: 101;
 }
 .pxs_navigation span.pxs_next{
 	background:#000 url(../images/next.png) no-repeat center center;
+	z-index: 101;
 }
 .pxs_loading{
 	color:#fff;
